unpackaged/main/default/objects/Patient_Order__c/Patient_Order__c.object-meta.xml
<CustomObject>
    <label>Patient Order</label>
    <nameField>
        <displayFormat>PO {000000}</displayFormat>
        <label>Patient Order Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Patient Orders</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>