unpackaged/main/default/objects/Patient_Order__c/fields/Main_Patient_Order__c.field-meta.xml
<CustomField>
    <fullName>Main_Patient_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link 'sub Orders' for items not dispatched, to the original Patient Order.</description>
    <inlineHelpText>If this Patient Order is a part of another or a sub-order, please link the original Order here.</inlineHelpText>
    <label>Main Patient Order</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Patient_Order__c</referenceTo>
    <relationshipLabel>Sub-Orders</relationshipLabel>
    <relationshipName>Sub_Patient_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>