unpackaged/main/default/objects/Patient_Order__c/fields/Next_Order_Date__c.field-meta.xml
<CustomField>
    <fullName>Next_Order_Date__c</fullName>
    <inlineHelpText>Once the patient has received this order, when would they be due to receive the next?</inlineHelpText>
    <label>Next Order Date</label>
    <type>Date</type>
</CustomField>