unpackaged/main/default/objects/Patient_Order__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Contact must be of type 'Patient'</errorMessage>
        <filterItems>
            <field>Contact.Relationship_to_Vitaflo__c</field>
            <operation>equals</operation>
            <value>Patient</value>
        </filterItems>
        <infoMessage>Contact must be of type 'Patient'</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Patient Orders</relationshipLabel>
    <relationshipName>Patient_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>