unpackaged/main/default/objects/Patient_Order__c/fields/Prescription__c.field-meta.xml
<CustomField>
    <fullName>Prescription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Prescription</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>Prescription must be for same patient as order</errorMessage>
        <filterItems>
            <field>Prescription__c.Patient__c</field>
            <operation>equals</operation>
            <valueField>$Source.Patient__c</valueField>
        </filterItems>
        <infoMessage>Prescription must be for same patient as order</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Prescription__c</referenceTo>
    <relationshipLabel>Patient Orders</relationshipLabel>
    <relationshipName>Patient_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>