unpackaged/main/default/objects/Patient_Order__c/fields/Regime__c.field-meta.xml
<CustomField>
    <fullName>Regime__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regime</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The Regime must be for the same patient and be marked as 'Active'. If there are no results, please review the patient's Regimes.</errorMessage>
        <filterItems>
            <field>$Source.Patient__c</field>
            <operation>equals</operation>
            <valueField>Regime__c.Patient__c</valueField>
        </filterItems>
        <filterItems>
            <field>Regime__c.Status__c</field>
            <operation>equals</operation>
            <value>Active, Pending</value>
        </filterItems>
        <infoMessage>The Regime must be for the same patient and be marked as 'Active'. If there are no results, please review the patient's Regimes.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Regime__c</referenceTo>
    <relationshipLabel>Patient Orders</relationshipLabel>
    <relationshipName>Patient_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>