unpackaged/main/default/objects/Patient_Order__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Open</fullName>
            </value>
            <value>
                <fullName>On Hold</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Stock Ordered</fullName>
            </value>
            <value>
                <fullName>Stock Received</fullName>
            </value>
            <value>
                <fullName>Delivery Booked</fullName>
            </value>
            <value>
                <fullName>Delivered</fullName>
            </value>
            <value>
                <fullName>Order Skipped</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>